layout bug solved

--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,14 @@ body {
 }
 
 .bg {
-	height: 100vh;
-	width: 100vh;
+	height: 100vh!important;
+	width: 100vh!important;
 	margin: auto;
 	display: flex;
 	justify-content: center;
 	align-items: flex-end;
+	overflow: hidden;
+	
 }
 
 .face {
@@ -16,6 +18,7 @@ body {
 	height: 75%;
 	background-image: url("./assets/images/face.svg");
 	background-size: cover;
+	
 }
 
 .container {
